--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -7,32 +7,33 @@ server.port=8443
 server.ssl.key-store=file:/etc/cas/thekeystore
 server.ssl.key-store-password=changeit
 server.ssl.key-password=changeit
-#server.ssl.ciphers=
-#server.ssl.client-auth=
-#server.ssl.enabled=
-#server.ssl.key-alias=
-#server.ssl.key-store-provider=
-#server.ssl.key-store-type=
-#server.ssl.protocol=
-#server.ssl.trust-store=
-#server.ssl.trust-store-password=
-#server.ssl.trust-store-provider=
-#server.ssl.trust-store-type=
+server.server.max-http-header-size=2097152
+server.use-forward-headers=true
+
+# server.ssl.ciphers=
+# server.ssl.client-auth=
+# server.ssl.enabled=
+# server.ssl.key-alias=
+# server.ssl.key-store-provider=
+# server.ssl.key-store-type=
+# server.ssl.protocol=
+# server.ssl.trust-store=
+# server.ssl.trust-store-password=
+# server.ssl.trust-store-provider=
+# server.ssl.trust-store-type=
+
 
 server.tomcat.basedir=build/tomcat
 server.tomcat.accesslog.enabled=true
 server.tomcat.accesslog.pattern=%t %a "%r" %s (%D ms)
 server.tomcat.accesslog.suffix=.log
-server.tomcat.max-http-header-size=2097152
 server.tomcat.max-threads=5
 server.tomcat.port-header=X-Forwarded-Port
 server.tomcat.protocol-header=X-Forwarded-Proto
 server.tomcat.protocol-header-https-value=https
 server.tomcat.remote-ip-header=X-FORWARDED-FOR
 server.tomcat.uri-encoding=UTF-8
-
-server.use-forward-headers=true
-
+        
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 spring.http.encoding.force=true
@@ -40,22 +41,18 @@ spring.http.encoding.force=true
 ##
 # CAS Cloud Amqp Bus Configuration
 #
-spring.cloud.bus.enabled=false
-spring.cloud.bus.refresh.enabled=true
-spring.cloud.bus.env.enabled=true
-spring.cloud.bus.destination=CasCloudBus
-spring.cloud.bus.ack.enabled=true
-# spring.activemq.broker-url=
-# spring.activemq.in-memory=
-# spring.activemq.pooled=
-# spring.activemq.user=
-# spring.activemq.password=
-
+# spring.cloud.bus.enabled=false
+# spring.cloud.bus.refresh.enabled=true
+# spring.cloud.bus.env.enabled=true
+# spring.cloud.bus.destination=CasCloudBus
+# spring.cloud.bus.ack.enabled=true
+        
 endpoints.enabled=true
 endpoints.sensitive=true
 management.context-path=/status
 endpoints.restart.enabled=false
 endpoints.shutdown.enabled=false
+
 
 ##
 # CAS Web Application Session Configuration
