--- a/gradle.properties
+++ b/gradle.properties
@@ -38,7 +38,7 @@ disruptorVersion=3.3.4
 inspektrVersion=1.5.GA
 
 springVersion=4.3.1.RELEASE
-springIntegrationVersion=4.2.8.RELEASE
+springIntegrationVersion=4.3.0.RELEASE
 springWebflowClientVersion=1.0.3
 springWebflowVersion=2.4.4.RELEASE
 springDataCommonsVersion=1.12.2.RELEASE
@@ -50,7 +50,7 @@ springCloudConfigVersion=1.1.2.RELEASE
 springCloudStarterVersion=1.1.1.RELEASE
 springCloudContextVersion=1.1.1.RELEASE
 
-springCloudBusAmqStarterVersion=1.1.0.RELEASE
+springCloudBusVersion=1.1.0.RELEASE
 
 springBootVersion=1.4.0.RC1
 springBootTomcatVersion=8.5.4
