--- a/cas-server-core-configuration-cloud-kafka/build.gradle
+++ b/cas-server-core-configuration-cloud-kafka/build.gradle
@@ -1,4 +1,6 @@
 description = "Apereo CAS Core Configuration - Cloud Bus Kafka"
 dependencies {
-    
+    compile libraries.springboot
+    compile libraries.springcloud
+    compile libraries.springcloudbuskafka
 }
