--- a/cas-management-webapp-support/build.gradle
+++ b/cas-management-webapp-support/build.gradle
@@ -9,8 +9,9 @@ dependencies {
     compile libraries.casclient
     compile libraries.javaximpl
     compile libraries.hibernate
-    runtime libraries.groovy
+    compile libraries.groovy
     compile project(":cas-server-core-configuration")
+    compile project(":cas-server-core-configuration-cloud-amqp")
     compile project(":cas-server-core-services")
     compile project(":cas-server-support-oauth-core")
     compile project(":cas-server-support-saml-idp-core")
