--- a/cas-server-support-memcached-monitor/build.gradle
+++ b/cas-server-support-memcached-monitor/build.gradle
@@ -3,6 +3,7 @@ dependencies {
     compile project(":cas-server-core-monitor")
     compile libraries.spring
     compile libraries.memcached
+    compile libraries.kryo
     compile libraries.hibernate
     testCompile project(":cas-server-core-authentication")
     testCompile project(path: ":cas-server-support-memcached-ticket-registry", configuration: "tests")
