--- a/cas-server-support-memcached-ticket-registry/build.gradle
+++ b/cas-server-support-memcached-ticket-registry/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     compile project(":cas-server-core-logging")
     compile project(":cas-server-core-tickets")
     compile project(":cas-server-core-services")
+    compile project(":cas-server-core-configuration")
 
     testCompile project(":cas-server-core-util")
     testCompile libraries.tests
