Added ticket ciphers for every registry

--- a/cas-server-core-configuration/build.gradle
+++ b/cas-server-core-configuration/build.gradle
@@ -9,4 +9,5 @@ dependencies {
     compile libraries.ldaptive
 
     compileOnly project(":cas-server-core-api-authentication")
+    compileOnly project(":cas-server-core-util")
 }
