--- a/cas-server-core-util/build.gradle
+++ b/cas-server-core-util/build.gradle
@@ -2,14 +2,14 @@ description = "Apereo CAS Core Utilities"
 dependencies {
     compile project(":cas-server-core-api-authentication")
     compile project(":cas-server-core-api-util")
-    compile libraries.spring
-    compile libraries.springcloud
-    compile libraries.springboot
-    compile libraries.shiro
-    compile libraries.quartz
-    compile libraries.jackson
-    compile libraries.jose4j
-    compile libraries.httpclient
-    compile libraries.bouncycastle
+    compileOnly libraries.spring
+    compileOnly libraries.springcloud
+    compileOnly libraries.springboot
+    compileOnly libraries.shiro
+    compileOnly libraries.quartz
+    compileOnly libraries.jackson
+    compileOnly libraries.jose4j
+    compileOnly libraries.httpclient
+    compileOnly libraries.bouncycastle
 }
 
