--- a/cas-server-webapp/build.gradle
+++ b/cas-server-webapp/build.gradle
@@ -18,10 +18,10 @@ javadoc {
 war {
     manifest {
         attributes("Implementation-Title": project.name,
-                   "Implementation-Vendor": project.group,
-                    "Created-By": project.group,
-                    "Implementation-Date": java.time.ZonedDateTime.now(),
-                    "Implementation-Version": project.version)
+                "Implementation-Vendor": project.group,
+                "Created-By": project.group,
+                "Implementation-Date": java.time.ZonedDateTime.now(),
+                "Implementation-Version": project.version)
     }
     from "${project.buildDir}/generated-src/main/resources", { into "WEB-INF/classes" }
     enabled = !rootProject.publishReleases
@@ -50,7 +50,6 @@ bootRepackage {
 
 dependencies {
     compile project(":cas-server-core")
-    compile project(":cas-server-core-configuration")
     compile project(":cas-server-core-monitor")
     compile project(":cas-server-core-authentication")
     compile project(":cas-server-core-services")
@@ -61,6 +60,8 @@ dependencies {
     compile project(":cas-server-core-web")
     compile project(":cas-server-core-validation")
     compile project(":cas-server-core-util")
+    compile project(":cas-server-core-configuration")
+    compile project(":cas-server-core-configuration-cloud-amqp")
     compile project(":cas-server-webapp-init")
     compile project(":cas-server-support-throttle")
     compile project(":cas-server-support-actions")
@@ -69,16 +70,16 @@ dependencies {
     compile project(":cas-server-support-themes")
     compile project(":cas-server-webapp-config")
     compile project(":cas-server-support-validation")
-    
+
     providedRuntime libraries.springboottomcat
-    runtime libraries.pac4j
-    runtime libraries.springcloud
-    runtime libraries.springboot
-    runtime libraries.thmyeleaf
-    runtime libraries.groovy
-    runtime libraries.spring
-    runtime libraries.cassecurityfilter
-    runtime libraries.metrics
-    runtime libraries.hibernate
-    runtime libraries.bouncycastle
+    compile libraries.pac4j
+    compile libraries.springcloud
+    compile libraries.springboot
+    compile libraries.thmyeleaf
+    compile libraries.groovy
+    compile libraries.spring
+    compile libraries.cassecurityfilter
+    compile libraries.metrics
+    compile libraries.hibernate
+    compile libraries.bouncycastle
 }
