Allow auto-construction of ticket registry ciphers based on application properties (#1918)
* Added ticket ciphers for every registry

* Added ticket ciphers for every registry

* Added ticket ciphers for every registry

* Added ticket ciphers for every registry

* Added ticket ciphers for every registry

* Updated docs.

* Updated docs.

* Updated docs.

* Updated docs.

* Updated docs.

* Removed unused imports

* Fixed test cases for ldap monitor

--- a/cas-server-core-util/build.gradle
+++ b/cas-server-core-util/build.gradle
@@ -1,11 +1,10 @@
-
 description = "Apereo CAS Core Utilities"
 dependencies {
     compile project(":cas-server-core-api-authentication")
     compile project(":cas-server-core-api-util")
-    compile project(":cas-server-core-configuration")
-    compile libraries.spring
-    compile libraries.springcloud
+    compileOnly libraries.spring
+    compileOnly libraries.springcloud
+    compileOnly libraries.springboot
     compile libraries.shiro
     compile libraries.quartz
     compile libraries.jackson
