Update server functions to only display when endpoints are enabled.

--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -21,8 +21,7 @@ server.use-forward-headers=true
 # server.ssl.trust-store-password=
 # server.ssl.trust-store-provider=
 # server.ssl.trust-store-type=
-
-
+        
 server.tomcat.basedir=build/tomcat
 server.tomcat.accesslog.enabled=true
 server.tomcat.accesslog.pattern=%t %a "%r" %s (%D ms)
@@ -39,7 +38,7 @@ spring.http.encoding.enabled=true
 spring.http.encoding.force=true
 
 ##
-# CAS Cloud Amqp Bus Configuration
+# CAS Cloud Bus Configuration
 #
 # spring.cloud.bus.enabled=false
 # spring.cloud.bus.refresh.enabled=true
