Update server functions to only display when endpoints are enabled.

--- a/cas-server-support-bom/build.gradle
+++ b/cas-server-support-bom/build.gradle
@@ -9,6 +9,8 @@ install {
     repositories.mavenInstaller {
         pom.whenConfigured {
             packaging = "pom"
+            artifactId = project.name
+            
             withXml {
                 def deps = asNode().get("dependencies")
                 asNode().remove(deps)
