Update ldaptive version

--- a/gradle.properties
+++ b/gradle.properties
@@ -97,7 +97,7 @@ googleAuthVersion=1.1.1
 googleZxingVersion=3.2.1
 maxmindVersion=2.7.0
 
-ldaptiveVersion=1.2.0-SNAPSHOT
+ldaptiveVersion=1.2.0
 unboundidVersion=3.1.1
 
 jcifsVersion=1.3.17
