--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@ gradleVersion=2.14.1
 sourceCompatibility=1.8
 targetCompatibility=1.8
 group=org.apereo.cas
-version=5.0.0.RC1-SNAPSHOT
+version=5.0.0.RC1ph-SNAPSHOT
 
 aspectjVersion=1.8.9
 junitVersion=4.12
