--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ aspectjVersion=1.8.6
 sourceCompatibility=1.7
 targetCompatibility=1.7
 group=org.jasig.cas
-version=4.2.4
+version=4.2.5-SNAPSHOT
 
 junitVersion=4.12
 mockitoVersion=1.10.19
