--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -7,7 +7,8 @@ server.port=8443
 server.ssl.key-store=file:/etc/cas/thekeystore
 server.ssl.key-store-password=changeit
 server.ssl.key-password=changeit
-server.server.max-http-header-size=2097152
+server.max-http-header-size=2097152
+server.max-http-post-size=2097152
 server.use-forward-headers=true
 
 # server.ssl.ciphers=
