--- a/settings.gradle
+++ b/settings.gradle
@@ -9,8 +9,10 @@ include "cas-server-core-api-ticket"
 include "cas-server-core-api-validation"
 include "cas-server-core-api-web"
 include "cas-server-core-api"
-include "cas-server-core-util"
 include "cas-server-core-api-protocol"
+include "cas-server-core-api-events"
+
+include "cas-server-core-util"
 include "cas-server-core-webflow"
 include "cas-server-core-web"
 include "cas-server-core-logging"
@@ -28,6 +30,7 @@ include "cas-server-core-authentication"
 include "cas-server-core"
 
 include "cas-server-documentation"
+
 include "cas-server-support-bom"
 include "cas-server-support-jdbc-drivers"
 include "cas-server-support-audit-jdbc"
@@ -99,7 +102,7 @@ include "cas-server-support-rest-services"
 include "cas-server-support-rest-authentication"
 include "cas-server-support-yubikey"
 include "cas-server-support-duo"
-include ":cas-server-support-authy"
+include "cas-server-support-authy"
 include "cas-server-support-hazelcast-ticket-registry"
 include "cas-server-support-hazelcast-monitor"
 include "cas-server-support-mongo-service-registry"
