--- a/cas-server-core-authentication/build.gradle
+++ b/cas-server-core-authentication/build.gradle
@@ -2,8 +2,8 @@ description = "Apereo CAS Core Authentication"
 dependencies {
     compile project(":cas-server-core-api-services")
     compile project(":cas-server-core-api-ticket")
-    compile project(":cas-server-core-util")
     compile project(":cas-server-core-configuration")
+    compile project(":cas-server-core-api-events")
     compile libraries.metrics
     compile libraries.inspektr
     compile libraries.persondirectory
