--- a/cas-server-core-web/build.gradle
+++ b/cas-server-core-web/build.gradle
@@ -4,8 +4,9 @@ dependencies {
     compile project(":cas-server-core-api-web")
     compile project(":cas-server-core-api-ticket")
     compile project(":cas-server-core-api-services")
-    compile project(":cas-server-core-authentication")
+    compile project(":cas-server-core-api-authentication")
     compile project(":cas-server-core-api-logout")
+    compile project(":cas-server-core-util")
     compile libraries.pac4j
     compile libraries.spring
     compile libraries.springboot
