Let travis bootify app for snapshots

--- a/cas-management-webapp/build.gradle
+++ b/cas-management-webapp/build.gradle
@@ -18,7 +18,7 @@ springBoot  {
 
 bootRepackage {
     mainClass = "org.apereo.cas.mgmt.web.CasManagementWebApplication"
-    enabled = !rootProject.publishReleases
+    enabled = !rootProject.publishReleases && !rootProject.publishSnapshots
 }
 
 war {
