--- a/cas-server-webapp/build.gradle
+++ b/cas-server-webapp/build.gradle
@@ -24,7 +24,7 @@ war {
                 "Implementation-Version": project.version)
     }
     from "${project.buildDir}/generated-src/main/resources", { into "WEB-INF/classes" }
-    enabled = !rootProject.publishReleases
+    enabled = !rootProject.publishReleases && !rootProject.publishSnapshots
 }
 
 
