Google auth spa registry

--- a/settings.gradle
+++ b/settings.gradle
@@ -77,6 +77,7 @@ include "cas-server-support-pac4j"
 include "cas-server-support-pac4j-webflow"
 include "cas-server-support-mongo"
 include "cas-server-support-gauth"
+include "cas-server-support-gauth-jpa"
 include "cas-server-support-couchbase-core"
 include "cas-server-support-couchbase-service-registry"
 include "cas-server-support-couchbase-ticket-registry"
