fixed issue with memcached handling ticket timeouts when encryption is on

--- a/cas-server-webapp/build.gradle
+++ b/cas-server-webapp/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     compile project(':cas-server-webapp-reports')
     compile project(':cas-server-webapp-themes')
     compile project(':cas-server-webapp-validation')
+    compile project(':cas-server-integration-memcached')
 
     compile(group: 'org.pac4j', name: 'spring-webmvc-pac4j', version: springWebmvcPac4jVersion) {
         exclude(group: 'org.springframework', module: 'spring-webmvc')
