--- a/cas-server-core-events/build.gradle
+++ b/cas-server-core-events/build.gradle
@@ -5,6 +5,7 @@ dependencies {
     compile project(":cas-server-core-api-validation")
     compile project(":cas-server-core-api-events")
     compile project(":cas-server-core-web")
+    compile project(":cas-server-core-util")
     compile libraries.spring
     compile libraries.hibernate
     testCompile project(path: ":cas-server-core-tickets", configuration: "tests")
