Working on googlemaps geo profiling

--- a/gradle.properties
+++ b/gradle.properties
@@ -96,6 +96,7 @@ authyVersion=1.1.0
 googleAuthVersion=1.1.1
 googleZxingVersion=3.2.1
 maxmindVersion=2.7.0
+googleMapsGeoCodingVersion=0.1.15
 
 ldaptiveVersion=1.2.0
 unboundidVersion=3.1.1
