--- a/cas-server-support-actions/build.gradle
+++ b/cas-server-support-actions/build.gradle
@@ -7,6 +7,7 @@ dependencies {
     compile project(":cas-server-core-tickets")
     compile project(":cas-server-core-services")
     compile project(":cas-server-core-configuration")
+    compile project(":cas-server-support-geolocation")
     compile libraries.spring
     runtime libraries.hibernate
     testCompile project(":cas-server-core")
