--- a/settings.gradle
+++ b/settings.gradle
@@ -46,6 +46,8 @@ include "cas-server-support-jpa-service-registry"
 include "cas-server-support-jpa-ticket-registry"
 include "cas-server-support-jpa-util"
 include "cas-server-support-geolocation"
+include "cas-server-support-geolocation-googlemaps"
+include "cas-server-support-geolocation-maxmind"
 include "cas-server-support-ldap"
 include "cas-server-support-ldap-core"
 include "cas-server-support-ldap-service-registry"
