--- a/cas-server-support-geolocation/build.gradle
+++ b/cas-server-support-geolocation/build.gradle
@@ -5,5 +5,6 @@ dependencies {
     compile libraries.spring
     compile libraries.groovy
     compile libraries.springcloud
+    compile libraries.userinfogeocoding
 }
 
