--- a/cas-server-webapp/build.gradle
+++ b/cas-server-webapp/build.gradle
@@ -64,13 +64,14 @@ dependencies {
     compile project(":cas-server-core-configuration-cloud-amqp")
     compile project(":cas-server-webapp-init")
     compile project(":cas-server-support-throttle")
+    compile project(":cas-server-support-geolocation")
     compile project(":cas-server-support-actions")
     compile project(":cas-server-support-cookie")
     compile project(":cas-server-support-reports")
     compile project(":cas-server-support-themes")
     compile project(":cas-server-webapp-config")
     compile project(":cas-server-support-validation")
-
+    
     providedRuntime libraries.springboottomcat
     compile libraries.pac4j
     compile libraries.springcloud
