Updated dependency version

--- a/gradle.properties
+++ b/gradle.properties
@@ -90,6 +90,9 @@ hjsonVersion=1.1.4
 personDirectoryVersion=1.8.2
 quartzVersion=2.2.3
 
+okioHttpVersion=2.7.5
+okioVersion=1.9.0
+
 yubicoVersion=3.0.1
 duoVersion=1.1
 authyVersion=1.1.0
