--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -107,6 +107,15 @@ ext.libraries = [
                     exclude(group: "com.google.guava", module: "guava")
                     exclude(group: "joda-time", module: "joda-time")
                     exclude(group: "org.slf4j", module: "slf4j-api")
+                    exclude(group: "com.squareup.okio", module: "okio")
+                    force = true
+                },
+                dependencies.create("com.squareup.okhttp:okhttp-urlconnection:$okioHttpVersion") {
+                    exclude(group: "com.squareup.okio", module: "okio")
+                    force = true
+                },
+                dependencies.create("com.squareup.okio:okio:$okioVersion") {
+                    force = true
                 }
         ],
         guava                   : [
