--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -41,7 +41,7 @@ spring.http.encoding.force=true
 ##
 # CAS Cloud Bus Configuration
 #
-# spring.cloud.bus.enabled=false
+spring.cloud.bus.enabled=false
 # spring.cloud.bus.refresh.enabled=true
 # spring.cloud.bus.env.enabled=true
 # spring.cloud.bus.destination=CasCloudBus
