--- a/cas-server-support-spnego-webflow/build.gradle
+++ b/cas-server-support-spnego-webflow/build.gradle
@@ -5,4 +5,5 @@ dependencies {
     compile project(":cas-server-support-spnego")
     compile libraries.ldaptive
     testCompile project(path: ":cas-server-support-ldap", configuration: "tests")
+    testCompile libraries.log4j
 }
