--- a/settings.gradle
+++ b/settings.gradle
@@ -114,14 +114,14 @@ include "cas-server-support-reports"
 include "cas-server-support-themes"
 
 include "cas-server-webapp-init"
-include "cas-server-webapp-session-redis"
-include "cas-server-webapp-session-hazelcast"
+#include "cas-server-webapp-session-redis"
+#include "cas-server-webapp-session-hazelcast"
 include "cas-server-webapp-session-mongo"
 include "cas-server-support-throttle"
 include "cas-server-support-throttle-jdbc"
 include "cas-server-support-validation"
 include "cas-server-support-actions"
-include "cas-server-support-actions-aup-ldap"
+#include "cas-server-support-actions-aup-ldap"
 include "cas-server-support-actions-aup-webflow"
 include "cas-server-webapp-config"
 include "cas-server-webapp"
