Working on vault support

--- a/gradle.properties
+++ b/gradle.properties
@@ -51,6 +51,7 @@ springCloudStarterVersion=1.1.1.RELEASE
 springCloudContextVersion=1.1.1.RELEASE
 
 springCloudBusVersion=1.1.0.RELEASE
+springCloudVaultVersion=1.0.0.BUILD-SNAPSHOT
 
 springBootVersion=1.4.0.RELEASE
 springBootTomcatVersion=8.5.4
