--- a/build.gradle
+++ b/build.gradle
@@ -201,6 +201,13 @@ def projectMavenDeployer = {
                 }
             }
             repository {
+                id "spring-libs-snapshots"
+                url "https://repo.spring.io/libs-snapshot"
+                snapshots {
+                    enabled true
+                }
+            }
+            repository {
                 id "jitpack"
                 url "https://jitpack.io"
                 releases {
@@ -338,6 +345,7 @@ subprojects {
         maven { url "http://files.couchbase.com/maven2" }
         maven { url "https://repo.spring.io/milestone" }
         maven { url "https://repo.spring.io/snapshot" }
+        maven { url "https://repo.spring.io/libs-snapshot" }
         maven { url "https://dl.bintray.com/uniconiam/maven" }
     }
 
