--- a/cas-server-core-configuration-cloud-vault/build.gradle
+++ b/cas-server-core-configuration-cloud-vault/build.gradle
@@ -1,6 +1,7 @@
 description = "Apereo CAS Core Configuration - HashiCorp Vault"
 dependencies {
     compile libraries.springboot
-    compile libraries.springcloud
+    compile libraries.spring
     compile libraries.springcloudvault
+    compileOnly project(":cas-server-core-configuration")
 }
