--- a/cas-server-webapp/src/main/resources/apereo.properties
+++ b/cas-server-webapp/src/main/resources/apereo.properties
@@ -1,2 +1,3 @@
 standard.custom.css.file=/themes/apereo/css/cas.css
+standard.custom.css.google.font=/css/fonts.googleapis.css
 cas.javascript.file=/themes/apereo/js/cas.js
