--- a/cas-server-webapp/src/main/resources/application.properties
+++ b/cas-server-webapp/src/main/resources/application.properties
@@ -4,9 +4,9 @@
 server.context-path=/cas
 server.port=8443
 
-server.ssl.key-store=file:/etc/cas/thekeystore
-server.ssl.key-store-password=changeit
-server.ssl.key-password=changeit
+server.ssl.key-store=/etc/cas/thekeystore
+server.ssl.key-store-password=caodao1688
+server.ssl.key-password=caodao1688
 server.max-http-header-size=2097152
 server.max-http-post-size=2097152
 server.use-forward-headers=true
@@ -82,7 +82,7 @@ spring.aop.proxy-target-class=true
 ##
 # CAS Authentication Credentials
 #
-cas.authn.accept.users=casuser::Mellon
+#cas.authn.accept.users=casuser::Mellon
 
 ##
 # CAS Authentication Attributes
@@ -91,3 +91,18 @@ cas.authn.attributeRepository.attributes.uid=uid
 cas.authn.attributeRepository.attributes.displayName=displayName
 cas.authn.attributeRepository.attributes.cn=commonName
 cas.authn.attributeRepository.attributes.affiliation=groupMembership
+
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://192.168.0.71:3306/cas?useUnicode=true
+spring.datasource.username=root
+spring.datasource.password=123456
+# Specify the DBMS
+spring.jpa.database = MYSQL
+# Show or not log for each sql query
+spring.jpa.show-sql = true
+# Hibernate ddl auto (create, create-drop, update)
+spring.jpa.hibernate.ddl-auto = update
+# Naming strategy
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+# stripped before adding them to the entity manager)
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
