--- a/settings.gradle
+++ b/settings.gradle
@@ -101,6 +101,7 @@ include "cas-server-support-ehcache-monitor"
 include "cas-server-support-pac4j-authentication"
 include "cas-server-support-pac4j-core"
 include "cas-server-support-shell"
+include "cas-server-support-captcha"
 include "cas-server-support-rest"
 include "cas-server-support-rest-services"
 include "cas-server-support-rest-authentication"
