--- a/settings.gradle
+++ b/settings.gradle
@@ -27,6 +27,7 @@ include "cas-server-core-configuration"
 include "cas-server-core-configuration-cloud-amqp"
 include "cas-server-core-configuration-cloud-kafka"
 include "cas-server-core-configuration-cloud-vault"
+include "cas-server-core-configuration-cloud-mongo"
 include "cas-server-core-authentication"
 include "cas-server-core"
 
