--- a/settings.gradle
+++ b/settings.gradle
@@ -114,6 +114,7 @@ include "cas-server-support-hazelcast-ticket-registry"
 include "cas-server-support-hazelcast-monitor"
 include "cas-server-support-mongo-service-registry"
 include "cas-server-support-cookie"
+include "cas-server-support-pm"
 include "cas-server-support-reports"
 include "cas-server-support-themes"
 include "cas-server-support-throttle"
