--- a/cas-server-core-audit/build.gradle
+++ b/cas-server-core-audit/build.gradle
@@ -8,6 +8,8 @@ dependencies {
     compile libraries.hibernate
     compile project(":cas-server-core-web")
     compile project(":cas-server-core-util")
+    compile project(":cas-server-core-api-events")
+    compile project(":cas-server-core-authentication")
     testCompile project(":cas-server-core-logout")
     testCompile project(":cas-server-core-monitor")
     testCompile project(":cas-server-core-util")
