--- a/cas-server-webapp/build.gradle
+++ b/cas-server-webapp/build.gradle
@@ -35,7 +35,7 @@ bootRun {
     }
 
     addResources = true
-    jvmArgs = ["-Xrunjdwp:transport=dt_socket,address=5000,server=y,suspend=n"]
+    //jvmArgs = ["-Xrunjdwp:transport=dt_socket,address=5000,server=y,suspend=n"]
     systemProperties = System.properties
 }
 
